--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,5 +1,102 @@
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
 body {
-  color: white;
+  color: #333;
+  font-size: 12px;
+  @media(max-width:767px){
+    font-size: 12px;
+  }
+  @media(min-width:768px){
+    font-size: 16px;
+  }
+  font-family: 'Montserrat', sans-serif;
+  background-size: cover;
+  background-image: url("../img/vector-sky.jpg");
+}
+
+a, a:visited, a:active, a:hover, a:focus {
+  text-decoration: none;
+}
+
+a, a:visited, a:active {
+  color: #333;
+}
+
+a:hover, a:focus {
+  color: #fff;
+}
+
+h1 {
+  font-size: 70px;
+}
+
+#religions-wrapper, #goals-wrapper {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+div.jqcloud a:hover {
+  color: #fff;
+}
+
+#plea, #plea-wrapper {
+  width:100%;
+}
+
+#plea {
+  padding: 15px;
+}
+
+/* The ribbons */
+
+.corner-ribbon{
+  width: 200px;
+  background: #e43;
+  position: absolute;
+  top: 25px;
+  left: -50px;
+  text-align: center;
+  line-height: 50px;
+  letter-spacing: 1px;
+  color: #f0f0f0;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+/* Custom styles */
+.corner-ribbon.sticky{
+  position: fixed;
+}
+.corner-ribbon.shadow{
+  box-shadow: 0 0 3px rgba(0,0,0,.3);
+}
+
+/* Different positions */
+.corner-ribbon.top-right{
+  top: 25px;
+  right: -50px;
+  left: auto;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+/* Colors */
+.corner-ribbon.white{background: #f0f0f0; color: #555;}
+.corner-ribbon.black{background: #333;}
+.corner-ribbon.grey{background: #999;}
+.corner-ribbon.blue{background: #39d;}
+.corner-ribbon.green{background: #2c7;}
+.corner-ribbon.turquoise{background: #1b9;}
+.corner-ribbon.purple{background: #95b;}
+.corner-ribbon.red{background: #e43;}
+.corner-ribbon.orange{background: #e82;}
+.corner-ribbon.yellow{background: #ec0;}
+
+.religion, .recipient {
+  font-size: 18px;
+  @media(max-width:767px){
+    font-size: 18px;
+  }
+  @media(min-width:768px){
+    font-size: 30px;
+  }
 }
