--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,8 +28,18 @@ h1 {
   width: 100%;
   height: 100%; }
 
-div.jqcloud a:hover {
-  color: #fff; }
+html, body {
+  height: 100%; }
+
+.content-wrapper {
+  height: 100%;
+  width: 100%;
+  display: table; }
+
+.main-wrapper {
+  display: table-cell;
+  height: 100%;
+  vertical-align: middle; }
 
 #plea, #plea-wrapper {
   width: 100%; }
