--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,7 +21,14 @@ a:hover, a:focus {
   color: #fff; }
 
 h1 {
-  font-size: 70px; }
+  font-size: 27px;
+  margin-bottom: 25px; }
+  @media (max-width: 767px) {
+    h1 {
+      font-size: 27px; } }
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 46px; } }
 
 #religions-wrapper, #goals-wrapper {
   display: inline-block;
