--- a/resources/assets/sass/wiplea_app.scss
+++ b/resources/assets/sass/wiplea_app.scss
@@ -9,7 +9,7 @@ body {
   }
   font-family: 'Montserrat', sans-serif;
   background-size: cover;
-  background-image: url("../img/vector-sky.jpg");
+  background-image: url("/img/vector-sky.jpg");
 }
 
 a, a:visited, a:active, a:hover, a:focus {
